# Quantum-Computing-Tutor

./: README.md  requirements.txt
backend/: file  main.py  pyproject.toml
frontend/: app.py  pyproject.toml
frontend/.ipynb_checkpoints/: app-checkpoint.py
scraping/: README.md  pyproject.toml  scraper.py
