[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["shraddhabhandarkar3 <bhandarkar.s@northeastern.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.15"
streamlit = "^1.40.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
